jest_output.txt
FAIL src/store/useISPStore.test.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation, specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\walac\Documents\Projetos\ISP Game\src\store\useISPStore.ts:58
            const worker = new Worker(new URL('../systems/SimulationWorker.ts', import.meta.url));
                                                                                       ^^^^

    SyntaxError: Cannot use 'import.meta' outside a module

    > 1 | import { useISPStore } from './useISPStore';
        | ^
      2 |
      3 | describe('useISPStore state manipulation', () => {
      4 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1314:40)
      at Object.<anonymous> (src/store/useISPStore.test.ts:1:1)

PASS src/systems/SimulationWorker.test.ts
PASS src/utils/geoUtils.test.ts

Test Suites: 1 failed, 2 passed, 3 total
Tests:       5 passed, 5 total
Snapshots:   0 total
Time:        0.648 s, estimated 1 s
Ran all test suites matching src/.
